Opened 10 years ago

Closed 10 years ago

Last modified 10 years ago

#12293 closed bug (fixed)

MouseDownThread leaks a pthread+object

Reported by: ttcoder Owned by: axeld
Priority: normal Milestone: R1
Component: Kits/Interface Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Picking up from ticket:12286#comment:11 ..etc

Seemingly not a huge biggie since this is a heap leak (not ports or thread_id's leak), and even then it's a couple KBytes on each mouse invokation.

Summary:

  • depending on how the class is used elsewhere, the fix might be as simple as removing the kill_thread()/TRESPASS()/ASSERT() calls.
  • if other users do not behave as BMenu does (e.g. they expect to delete the object themselves and cannot be easily re-organized) things are more dicey.. It might take a rewrite/reorganization of that class.

Change History (2)

comment:1 by pulkomandy, 10 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev49514, unfortunately the port leak is still there.

comment:2 by ttcoder, 10 years ago

Thanks much pulkomandy! Let's test.. If there's no regression it will be the first time I've found an issue and a correct fix for it :-)

Note: See TracTickets for help on using tickets.